# app/controllers/concerns/authenticatable.rb
@@ -21,13 +21,13 @@ module Authenticatable
   end
 
   def fetch_current_user
-    User.with_api_key(user_token) ||
+    User.with_api_token(user_token) ||
       User.from_remote(*remote_user_params)
   end
 
   def user_token
     token, _options = ActionController::HttpAuthentication::Token.token_and_options(request)
-    token.presence || params[:api_key].presence
+    token.presence || params[:api_token].presence
   end
 
   def remote_user_params
